# Cooperative_Robotics

./: LICENSE  README.md  opencv_tracking_down_intrinsics.yml  opencv_tracking_front_intrinsics.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aruco_pose_publisher/share/ament_index/resource_index/package_run_dependencies/: aruco_pose_publisher
install/aruco_pose_publisher/share/ament_index/resource_index/parent_prefix_path/: aruco_pose_publisher
install/aruco_pose_publisher/share/aruco_pose_publisher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/aruco_pose_publisher/share/aruco_pose_publisher/cmake/: aruco_pose_publisherConfig.cmake
install/aruco_pose_publisher/share/aruco_pose_publisher/launch/: aruco_pose_publisher.launch.py
log/: latest_build
src/aruco_pose_publisher/: CMakeLists.txt  README.md
src/aruco_pose_publisher/src/: aruco_pose_publisher_node.cpp
src/aruco_tracking/: package.xml  setup.py
src/aruco_tracking/aruco_tracking/: extrinsics.txt  opencv_aruco_test.py  voxl_camera_server.conf
